feat(.git): Added .gitignore exclusions on test wav files, models and extra indexes that are not to be included in the repository

--- a/.gitignore
+++ b/.gitignore
@@ -6,6 +6,11 @@ __pycache__/
 # C extensions
 *.so
 
+# Project Spcific
+models/
+similarity_engine/index/
+test_wav_files/
+
 # Distribution / packaging
 .Python
 build/
